# annotate

./: .buildinfo  .gitignore  CHANGES.html  CHANGES.rst  LICENSE  MANIFEST.in  README.html  README.rst  genindex.html  index.html  objects.inv  output.json  output.txt  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: CHANGES.doctree  README.doctree  environment.pickle  index.doctree
_static/: bizstyle.js  documentation_options.js
annotate/: __about__.py  __init__.py  _annotate.py
docs/: Makefile  conf.py  index.rst  make.bat
src/annotate/: __about__.py  __init__.py  _annotate.py
tests/: __init__.py  __main__.py  test_main.py
